# PackerPE

./: .gitignore  README.md  appveyor.yml
PackerPE/: CMakeLists.txt  PackerPE.sln  SimplePackPE.sln  build.bat
PackerPE/GUI/: EditDrop.cpp  EditDrop.h  GUI.cpp  GUI.h  GUI.rc  GUI.vcproj  GUI.vcxproj  GUI.vcxproj.filters  GUIDlg.cpp  GUIDlg.h  SimplePackPE.cpp  SimplePackPE.h  resource.h
PackerPE/GUI/res/: GUI.rc2
PackerPE/PELib/: MemFile.cpp  MemFile.h  PEFile.cpp  PEFile.h  PELib.vcproj  PELib.vcxproj  PELib.vcxproj.filters  executable.h  sections_helper.h  stdafx.cpp
PackerPE/PELibTest/: PELibTest.cpp  PELibTest.vcxproj  PELibTest.vcxproj.filters  ReadMe.txt  Resource.h  stdafx.cpp
PackerPE/Packer/: PEStubWriter.cpp  PEStubWriter.h  Packer.vcproj  Packer.vcxproj  Packer.vcxproj.filters  StubResourceID.h  stdafx.cpp  stdafx.h
PackerPE/SimplePackPE/: CMakeLists.txt  SimplePackPE.cpp  SimplePackPE.vcxproj  SimplePackPE.vcxproj.filters  stdafx.cpp
PackerPE/Stub/: Resource.h  Stub.cpp  Stub.h  Stub.vcproj  Stub.vcxproj  Stub.vcxproj.filters  stdafx.cpp  stdafx.h
PackerPE/autotest/FileDump/: FileDump.cpp
PackerPE/common/: CMakeLists.txt
PackerPE/common/inc/: common_utils.h  file_utils.h  stub_data.h
PackerPE/common/inc/alexandrescu/: expected.hpp
PackerPE/common/src/: file_utils.cpp
PackerPE/dependencies/: CMakeLists.txt
PackerPE/dependencies/libexe-20150105/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  configure  configure.ac  libexe.pc.in  libexe.spec  libexe.spec.in
PackerPE/dependencies/libexe-20150105/common/: Makefile.in  config.h  config.h.in  types.h
PackerPE/dependencies/libexe-20150105/dpkg/: changelog  changelog.in  control  copyright  copyright.in  rules
PackerPE/dependencies/libexe-20150105/exetools/: Makefile.am  Makefile.in  exeinfo.c  exeoutput.c  exeoutput.h  exetools_libbfio.h  exetools_libcerror.h  exetools_libclocale.h  exetools_libcnotify.h  exetools_libcstring.h  exetools_libcsystem.h  exetools_libexe.h  exetools_libfdatetime.h  exetools_libuna.h  info_handle.c  info_handle.h
PackerPE/dependencies/libexe-20150105/include/: Makefile.am  Makefile.in  libexe.h.in
PackerPE/dependencies/libexe-20150105/libbfio/: Makefile.am  Makefile.in  libbfio_codepage.h  libbfio_definitions.h  libbfio_error.c  libbfio_error.h  libbfio_extern.h  libbfio_file.c  libbfio_file.h  libbfio_file_pool.c  libbfio_file_pool.h  libbfio_file_range.c  libbfio_file_range.h  libbfio_handle.c  libbfio_handle.h  libbfio_libcdata.h  libbfio_libcerror.h  libbfio_libcfile.h  libbfio_libclocale.h  libbfio_libcpath.h  libbfio_libcstring.h  libbfio_libcthreads.h  libbfio_libuna.h  libbfio_memory_range.c  libbfio_memory_range.h  libbfio_pool.c  libbfio_pool.h  libbfio_support.c  libbfio_support.h  libbfio_types.h  libbfio_unused.h
PackerPE/dependencies/libexe-20150105/libcdata/: Makefile.am  Makefile.in  libcdata_array.c  libcdata_array.h  libcdata_btree.c  libcdata_btree.h  libcdata_definitions.h  libcdata_error.c  libcdata_error.h  libcdata_extern.h  libcdata_libcerror.h  libcdata_libcstring.h  libcdata_libcthreads.h  libcdata_list.c  libcdata_list.h  libcdata_list_element.c  libcdata_list_element.h  libcdata_range_list.c  libcdata_range_list.h  libcdata_range_list_value.c  libcdata_range_list_value.h  libcdata_support.c  libcdata_support.h  libcdata_tree_node.c  libcdata_tree_node.h  libcdata_types.h  libcdata_unused.h
PackerPE/dependencies/libexe-20150105/libcerror/: Makefile.am  Makefile.in  libcerror_definitions.h  libcerror_error.c  libcerror_error.h  libcerror_extern.h  libcerror_libcstring.h  libcerror_support.c  libcerror_support.h  libcerror_system.c  libcerror_system.h  libcerror_types.h  libcerror_unused.h
PackerPE/dependencies/libexe-20150105/libcfile/: Makefile.am  Makefile.in  libcfile_definitions.h  libcfile_error.c  libcfile_error.h  libcfile_extern.h  libcfile_file.c  libcfile_file.h  libcfile_libcerror.h  libcfile_libclocale.h  libcfile_libcnotify.h  libcfile_libcstring.h  libcfile_libuna.h  libcfile_notify.c  libcfile_notify.h  libcfile_stream.c  libcfile_stream.h  libcfile_support.c  libcfile_support.h  libcfile_types.h  libcfile_unused.h
PackerPE/dependencies/libexe-20150105/libclocale/: Makefile.am  Makefile.in  libclocale_codepage.c  libclocale_codepage.h  libclocale_definitions.h  libclocale_extern.h  libclocale_libcerror.h  libclocale_libcstring.h  libclocale_locale.c  libclocale_locale.h  libclocale_support.c  libclocale_support.h  libclocale_unused.h
PackerPE/dependencies/pelib/: BoundImportDirectory.cpp  BoundImportDirectory.h  ComHeaderDirectory.cpp  ComHeaderDirectory.h  DebugDirectory.cpp  DebugDirectory.h  ExportDirectory.cpp  ExportDirectory.h  IatDirectory.cpp  IatDirectory.h  ImportDirectory.h  MzHeader.cpp  MzHeader.h  PeFile.cpp  PeFile.h  PeHeader.cpp  PeHeader.h  PeLibAux.cpp  PeLibAux.h  PeLibInc.h  RelocationsDirectory.cpp  RelocationsDirectory.h  ResourceDirectory.cpp  ResourceDirectory.h  TlsDirectory.h
PackerPE/loader/: CMakeLists.txt
PackerPE/loader/inc/: loader.h
PackerPE/loader/src/: loader.cpp
PackerPE/spack/: CMakeLists.txt  main.cpp  spack.cpp  spack.h  tiny_logger.h
PackerPE/spack/inc/: ISectionsPacker.h  error_defines.h  iimport_packer.h  iloader_packer.h  import_packer.h  includes.h  inew_pe_builder.h  ipacker_base.h  isections_packer.h  istub_packer.h  loader_packer.h  main_loop.h  new_pe_builder.h  sections_packer.h  spack.h  stub_packer.h  tiny_logger.h
PackerPE/spack/interfaces/: iimport_packer.h  iloader_packer.h  imain_loop.h  inew_pe_builder.h  ipacker_base.h  isections_packer.h  istub_packer.h
PackerPE/spack/src/: import_packer.cpp  loader_packer.cpp  main.cpp  main_loop.cpp  new_pe_builder.cpp  sections_packer.cpp  spack.cpp  stub_packer.cpp
PackerPE/stub2rsrc/: CMakeLists.txt  stdafx.cpp  stub2rsrc.cpp  stub2rsrc.vcproj  stub2rsrc.vcxproj  stub2rsrc.vcxproj.filters
PackerPE/stub2rsrc/PELib/: MemFile.cpp
PackerPE/test/FileDump/: CMakeLists.txt  FileDump.cpp
PackerPE/travi_helpers/: boost_install.sh  gtest_install.sh
(+429 files in other folders)
